--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/auth": "^22.1.0",
     "@react-native-firebase/database": "^22.1.0",
     "@react-native-firebase/firestore": "^22.1.0",
+    "@react-native-firebase/messaging": "^22.1.0",
     "@react-native-firebase/storage": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -40,7 +41,7 @@
     "firebase": "^11.6.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
